--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "axios": "^0.19.2",
+    "buffer": "^5.6.0",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-web-browser": "~8.1.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "md5": "^2.2.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider-box": "^1.0.12",
@@ -35,7 +38,8 @@
     "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.7"
+    "react-navigation": "^4.3.7",
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
