--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "~10.0.6",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.0.0",
+    "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
@@ -25,6 +26,7 @@
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-web-browser": "~8.1.0",
+    "galio-framework": "^0.6.3",
     "jsencrypt": "^3.0.0-rc.1",
     "md5": "^2.2.1",
     "react": "~16.9.0",
@@ -39,7 +41,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl-util": "^0.15.1",
+    "react-native-reanimated": "~1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
