--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7",
-    "tweetnacl-util": "^0.15.1",
-    "react-native-reanimated": "~1.7.0"
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
