--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-modal-datetime-picker": "^8.6.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-scalable-image": "^1.0.0",
