--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-modal-datetime-picker": "^8.6.0",
+    "react-native-network-info": "^5.2.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "8.1.1",
     "react-navigation": "^4.3.7",
-    "tweetnacl-util": "^0.15.1",
-    "react-native-webview": "8.1.1"
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
