fix dropdown bug

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "~10.0.6",
     "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/picker": "^1.6.1",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.5.0",
     "@react-navigation/native": "^5.0.0",
@@ -37,9 +38,11 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^8.6.0",
     "react-native-network-info": "^5.2.1",
     "react-native-paper": "^3.10.1",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-scalable-image": "^1.0.0",
